canary-istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: flask-app
  namespace: istio
spec:
  hosts:
  - "*"
  gateways:
  - flask-gateway
  http:
  - route:
    retries:
      attempts: 3
      perTryTimeout: 2s
  - route:
    - destination:
        host: flask-service
        subset: v1
      weight: 80
    - destination:
        host: flask-service
        subset: v2
      weight: 20
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: gateway-error,connect-failure,refused-stream
